# arable

./: .env.example  .gitignore  AGENT_IMPLEMENTATION_SUMMARY.md  README.md  claude_desktop_instructions.md  final_validation.py  init_git.sh  pyproject.toml  refactor_to_lowercase.sh  requirements.txt  run.py  setup_dev.py  setup_git.sh  test_gitignore.sh  test_runner.py
arable/: __init__.py
arable/agents/: __init__.py  base.py  memory.py  orchestrator.py  registry.py
arable/agents/specialized/: __init__.py  document_extractor.py
arable/cli/: main.py
arable/integrations/: __init__.py  google_sheets.py  monday.py
arable/utils/: __init__.py  config.py  logger.py
config/: config.example.yaml
docs/: HOW_TO_USE_THIS_DOC.md  README.md
docs/technical/: README.md  architecture_plan.md  file_index.md  project_instructions.md
docs/technical/development/: agent_basics.md  agent_capabilities.md  agent_creation.md  agent_memory.md  agent_patterns.md  agent_testing.md  baseagent_reference.md  development.md
docs/technical/setup/: configuration_guide.md  deployment.md  environment_setup.md  (+2 more)
docs/user/: README.md  agent_development_guide.md  architecture.md  cli_reference.md  quick_start.md  setup.md  user_index.md
examples/: README.md  sample_proposal.txt
scripts/: migrate_from_monday_automation.py  setup_dev.py
src/monday_automation/: __init__.py  config.py  google_sheets.py  logger.py  main.py  monday_api.py
tests/: Makefile  conftest.py  test_config.py  test_google_sheets.py  test_integration.py  test_logger.py  test_main.py  test_monday_api.py
